data/derived/sp14/progs/unify/prog3549.ml.out
Characters 16-17:
  let _ = sumList 1;;
                  ^
Error: This expression has type int but an expression was expected of type
         int list
